non-msrv-tests/tests/ui/zeroize/zeroize.stderr
error: `Zeroize` doesn't support this option
 --> tests/ui/zeroize/zeroize.rs:5:24
  |
5 | #[derive_where(Zeroize(test))]
  |                        ^^^^

error: `Zeroize` doesn't support this option
 --> tests/ui/zeroize/zeroize.rs:8:24
  |
8 | #[derive_where(Zeroize(test = "test"))]
  |                        ^^^^

error: unexpected option syntax
  --> tests/ui/zeroize/zeroize.rs:11:24
   |
11 | #[derive_where(Zeroize("option"))]
   |                        ^^^^^^^^

error: unexpected option syntax
  --> tests/ui/zeroize/zeroize.rs:14:24
   |
14 | #[derive_where(Zeroize(crate(zeroize_)))]
   |                        ^^^^^^^^^^^^^^^

error: expected path, expected identifier
  --> tests/ui/zeroize/zeroize.rs:17:32
   |
17 | #[derive_where(Zeroize(crate = "struct Test"))]
   |                                ^^^^^^^^^^^^^

error: duplicate `crate` option
  --> tests/ui/zeroize/zeroize.rs:20:44
   |
20 | #[derive_where(Zeroize(crate = "zeroize_", crate = "zeroize_"))]
   |                                            ^^^^^^^^^^^^^^^^^^
